--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: USC Computer Services
+subTitle: Software Development and IT solutions
 ---
